# sauce-man

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yaml
examples/e01_basic_ping_bot/: Cargo.toml
examples/e03_struct_utilities/: Cargo.toml
examples/e05_command_framework/: Cargo.toml
examples/e09_create_message_builder/: Cargo.toml
examples/e10_collectors/: Cargo.toml
examples/e11_gateway_intents/: Cargo.toml
examples/e12_global_data/: Cargo.toml
examples/e14_slash_commands/: Cargo.toml
examples/e15_simple_dashboard/: Cargo.toml
examples/e17_message_components/: Cargo.toml
examples/e18_webhook/: Cargo.toml
examples/e19_interactions_endpoint/: Cargo.toml
poise/examples/manual_dispatch/: main.rs
scripts/: cargo_tips.sh  replace_with_sed.sh
serenity/examples/e02_transparent_guild_sharding/: Cargo.toml
serenity/examples/e04_message_builder/: Cargo.toml
serenity/examples/e06_sample_bot_structure/: Cargo.toml
serenity/examples/e07_env_logging/: Cargo.toml
serenity/examples/e08_shard_manager/: Cargo.toml
serenity/examples/e13_parallel_loops/: Cargo.toml
serenity/examples/e14_slash_commands/src/: main.rs
serenity/examples/e16_sqlite_database/: Cargo.toml
serenity/examples/testing/: Cargo.toml
v2/api/: Cargo.toml
v2/bot/: Cargo.toml  README.md
v2/bot/src/: main.rs
