[package]
name = "e03_struct_utilities"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
