[package]
name = "e07_env_logging"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2024"

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
features = ["client", "rustls_backend"]
version = "0.12"
