[package]
name = "e08_shard_manager"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.12"
